<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/profile_item_padding"
    android:paddingRight="@dimen/profile_item_padding"
    tools:context="edu.sjsu.team408.parkhere.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profileLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:text="@string/profileLabel"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:id="@+id/profileLL"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:contentDescription="@string/userProfilePictureDescription" />

            <Button
                android:id="@+id/editProfileBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:text="@string/edit"
                android:layout_marginRight="5dp"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <Button
                android:id="@+id/profileLogoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_light"
                android:text="@string/logOut"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:id="@+id/profileNameLL"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userFullNameLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userFullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:id="@+id/profileEmailLL"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userEmailLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:id="@+id/profilePhoneLL"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userPhoneLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:id="@+id/profileAddressLL"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userAddressLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/address"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </LinearLayout>

        <Button
            android:id="@+id/newListingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/postListing" />

        <Button
            android:id="@+id/newParkingSpaceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/addParkingSpace" />

        <Button
            android:id="@+id/viewParkingSpacesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/viewParkingSpaces" />


        <Button
            android:id="@+id/profileSignUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/signUp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

        <Button
            android:id="@+id/profileSignInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/signIn"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

    </LinearLayout>

</ScrollView>
