<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/input_message_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/new_message_button"
        android:layout_weight="0.7"
        android:hint="Input message" />

    <Button
        android:id="@+id/new_message_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:enabled="false"
        android:background="@color/background_floating_material_dark"
        android:text="Send"
        android:textColor="@color/background_material_light" />

    <AutoCompleteTextView
        android:id="@+id/toAutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/friendLabel"
        android:layout_alignBottom="@+id/friendLabel"
        android:layout_alignParentStart="true"
        android:hint="To:"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/friendLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="User Friend"
        android:visibility="invisible"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/chat_listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_message_editText"
        android:layout_below="@id/friendLabel"
        android:layout_alignParentStart="true"
        android:divider="@null"
        android:listSelector="@android:color/transparent"
        android:transcriptMode="alwaysScroll" />



</RelativeLayout>

