...
        android:textSize="20sp" />

    <EditText
        android:id="@+id/input_message_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/send_message_button"
        android:layout_toStartOf="@+id/send_message_button"
        android:hint="Input message" />
    <Button
        android:id="@+id/send_message_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
